finish style of categories

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <title>Vue Basic Template</title>
 </head>
 
-<body>
-  <div id="app"></div>
+<body class="bg-slate-600">
+  <div id="app" ></div>
   <script type="module" src="/src/main.js"></script>
 </body>
 
